--- a/src/client/styles/main.css
+++ b/src/client/styles/main.css
@@ -1,10 +1,38 @@
 body {
-    margin: 0 auto;
-    height: 100vh;
-    overflow: hidden;
+  color: white;
+  font-family: Arial, sans-serif;
+  height: 100vh;
+  margin: 0 auto;
+  overflow: hidden;
 }
 
 canvas {
-    width: 100%;
-    height: 100%;
+  height: 100%;
+  width: 100%;
+}
+
+footer {
+  bottom: 0;
+  height: 100px;
+  left: 0;
+  position: absolute;
+}
+
+footer.container-fluid .row {
+  height: 100%;
+}
+
+.container-fluid {
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  width: 100%;
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -15px;
+  margin-right: -15px;
 }
