notif && swal when click on bee

--- a/src/client/styles/main.css
+++ b/src/client/styles/main.css
@@ -341,6 +341,7 @@ a:hover {
 .swal2-container textarea {
   height: unset !important;
   padding: 0.75rem !important;
+  resize: none;
 }
 
 .swal2-container button,
