--- a/src/client/styles/main.css
+++ b/src/client/styles/main.css
@@ -201,7 +201,7 @@ canvas {
  - Links
 */
 
-a {
+a:not(.website) {
   font-size: 1.25rem; /* 20px */
   background-color: #52a2fb;
   background-image: linear-gradient(45deg, #14e1fa 0%, #14e1fa 55%, #52a2fb 90%);
@@ -217,11 +217,11 @@ a {
 }
 
 @media (min-width: 61.9375rem) { /* 991px */
-  a {
+  a:not(.website) {
     margin-left: -6rem;
   }
 
-  a:hover {
+  a:hover:not(.website) {
     box-shadow: 0 0 0 0 rgba(0, 40, 120, 0);
     background-position: 0 0;
     padding: 1em 2.75em;
