--- a/src/client/styles/main.css
+++ b/src/client/styles/main.css
@@ -87,6 +87,9 @@ canvas {
  -- text-align
 */
 
+.text-center {
+  text-align: center !important;
+}
 @media all and (min-width: 769px) {
   .text-lg-center {
     text-align: center !important;
